{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 18,
  "lineage": "1a1641a7-9fa9-834d-8a56-35453e136082",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e84a04816c54afa1",
            "public_dns": "ec2-15-207-52-248.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.52.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0447a12f28fddb066",
            "arn": "arn:aws:ec2:ap-south-1:173168492248:instance/i-0c7bf878d78f5364a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7bf878d78f5364a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20200717061403311700000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a44fb4cdf696530",
            "private_dns": "ip-192-168-2-24.ap-south-1.compute.internal",
            "private_ip": "192.168.2.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-020fc21d467e43a4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a78b251531fc136f",
            "tags": {
              "Name": "Myfirstos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-050aafa614db4a8cd"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.allow_tlsp2",
            "aws_subnet.mysqlsubnet",
            "aws_vpc.main",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-004a955bfb611bf13",
            "arn": "arn:aws:ec2:ap-south-1:173168492248:instance/i-06e7bbe5e3235630e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e7bbe5e3235630e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20200717061403311700000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d311ac4c3b9c4c6",
            "private_dns": "ip-192-168-1-134.ap-south-1.compute.internal",
            "private_ip": "192.168.1.134",
            "public_ip": "13.235.244.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f23bd049593adfc9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023f4c5094c39d1e3",
            "tags": {
              "Name": "Myfirstos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa3e6ed56da092ca"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.allow_tlsp",
            "aws_subnet.wordpresssubnet",
            "aws_vpc.main",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:173168492248:internet-gateway/igw-0620a80aeeaea3dce",
            "id": "igw-0620a80aeeaea3dce",
            "owner_id": "173168492248",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-065f82b69b2b1fdb5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e84a04816c54afa1",
            "id": "nat-00c2d02bd6b1d7b61",
            "network_interface_id": "eni-08a8e638c6dbd76fe",
            "private_ip": "192.168.1.46",
            "public_ip": "15.207.52.248",
            "subnet_id": "subnet-023f4c5094c39d1e3",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_subnet.wordpresssubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "beta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0620a80aeeaea3dce",
            "id": "r-rtb-0ee97557299419f351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee97557299419f35",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee97557299419f35",
            "owner_id": "173168492248",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-065f82b69b2b1fdb5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-064f8b4cd75a54838",
            "owner_id": "173168492248",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00c2d02bd6b1d7b61",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-065f82b69b2b1fdb5"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw1",
            "aws_subnet.wordpresssubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alpha",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6c1032f25c48efc",
            "route_table_id": "rtb-0ee97557299419f35",
            "subnet_id": "subnet-023f4c5094c39d1e3"
          },
          "dependencies": [
            "aws_route_table.r",
            "aws_subnet.wordpresssubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alpha1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ecf542024b77acc",
            "route_table_id": "rtb-064f8b4cd75a54838",
            "subnet_id": "subnet-0a78b251531fc136f"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw1",
            "aws_route_table.r1",
            "aws_subnet.mysqlsubnet",
            "aws_subnet.wordpresssubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tlsp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:173168492248:security-group/sg-0fa3e6ed56da092ca",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa3e6ed56da092ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tlsp",
            "name_prefix": null,
            "owner_id": "173168492248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tlsp"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f82b69b2b1fdb5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tlsp2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:173168492248:security-group/sg-050aafa614db4a8cd",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050aafa614db4a8cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Mysql Protocol",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_tlsp2",
            "name_prefix": null,
            "owner_id": "173168492248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tlsp2"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f82b69b2b1fdb5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysqlsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:173168492248:subnet/subnet-0a78b251531fc136f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0a78b251531fc136f",
            "map_public_ip_on_launch": false,
            "owner_id": "173168492248",
            "tags": {
              "Name": "mysqlsubnet"
            },
            "vpc_id": "vpc-065f82b69b2b1fdb5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpresssubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:173168492248:subnet/subnet-023f4c5094c39d1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-023f4c5094c39d1e3",
            "map_public_ip_on_launch": true,
            "owner_id": "173168492248",
            "tags": {
              "Name": "wordpresssubnet"
            },
            "vpc_id": "vpc-065f82b69b2b1fdb5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:173168492248:vpc/vpc-065f82b69b2b1fdb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c6d11977297d8d17",
            "default_route_table_id": "rtb-0fa90ba1215d8e4c6",
            "default_security_group_id": "sg-01a662c8a248c125b",
            "dhcp_options_id": "dopt-eebd7b85",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-065f82b69b2b1fdb5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa90ba1215d8e4c6",
            "owner_id": "173168492248",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}